# CLEAN-Plus-Plus

./: Dockerfile  README.md
data/: example_report.txt  project_results.tsv  projects.tsv  (+4 more)
src/oclint-metrics/: CMakeLists.txt
src/oclint-metrics/include/oclint/metric/: AbstractClassMethodDeclarationCount.h  AccessToLocalDataMetric.h  ClassPublicAccessorCountMetric.h  ClassPublicFieldCountMetric.h  ClassPublicMethodCountMetric.h  IsClassSingletonMetric.h  MethodCouplingDispersionMetric.h  MethodCouplingIntensityMetric.h  MethodMaxNestingMetric.h  MethodNOAVMetric.h  MethodNumOfAccessedVarMetric.h  MethodNumOfLocalVarsMetric.h  StringInMethodMetric.h  WmcMetric.h  WocMetric.h
src/oclint-metrics/include/oclint/util/: ASTUtil2.h  Edge.h  FieldDeclFinderVisitor.h  FieldDeclVisitorBase.h  FoundStatus.h  Graph.h  Thresholds.h  Vertex.h
src/oclint-metrics/lib/: AbstractClassMethodDeclarationCount.cpp  AccessToLocalDataMetric.cpp  CMakeLists.txt  ClassPublicAccessorCountMetric.cpp  ClassPublicFieldCountMetric.cpp  ClassPublicMethodCountMetric.cpp  CyclomaticComplexityMetric.cpp  IsClassSingletonMetric.cpp  MethodCouplingDispersionMetric.cpp  MethodCouplingIntensityMetric.cpp  MethodMaxNestingMetric.cpp  MethodNOAVMetric.cpp  MethodNumOfAccessedVarMetric.cpp  MethodNumOfLocalVarsMetric.cpp  NumLineOfClassMetric.cpp  StringInMethodMetric.cpp  WmcMetric.cpp
src/oclint-metrics/lib/util/: ASTUtil2.cpp  CMakeLists.txt  Edge.cpp  FieldDeclFinderVisitor.cpp  Graph.cpp  NumLineOfClassMetric.cpp  Vertex.cpp
src/oclint-metrics/test/: CMakeLists.txt  MethodMaxNestingMetricTest.cpp
(+645 files in other folders)
